// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineResultGenres should match snapshot with data 1`] = `
<div
  className="lineResultGenresContainer"
>
  Films by 
  horror, action
   genres
</div>
`;

exports[`LineResultGenres should match snapshot without data 1`] = `
<div
  className="lineResultGenresContainer"
>
  Films by unknown genre
</div>
`;
